// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Pages/Weapons default 1`] = `
.c1 {
  position: fixed;
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  border-top: 40px solid rgb(0,130,155);
  border-left: 30px solid transparent;
  border-right: 30px solid transparent;
  height: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  z-index: 1000;
}

.c1 h2 {
  position: relative;
  top: -40px;
  padding: 6px 6px;
  margin: 0 auto;
  color: rgb(234,242,246);
  white-space: nowrap;
  text-transform: uppercase;
}

.c5 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: repeat(1,1fr);
  grid-row-gap: 6px;
  grid-column-gap: 12px;
}

.c6 {
  max-width: 100%;
  padding: 6px;
  border: 2px solid rgb(0,130,155);
  border-radius: 5px;
  cursor: pointer;
  text-transform: uppercase;
  background: rgb(0,130,155);
  overflow: hidden;
  position: relative;
}

.c6 > h3 {
  margin: 0;
  color: rgb(234,242,246);
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c6 > svg {
  display: none;
  position: absolute;
  padding: 6px;
  right: 0;
  top: 0;
  font-size: 27px;
  color: rgb(234,242,246);
  background-color: inherit;
}

.c6:hover > svg {
  display: block;
}

.c7 {
  padding: 12px;
  display: none;
  grid-row-gap: 6px;
  grid-column-gap: 12px;
  grid-template-columns: repeat(1,1fr);
}

.c7 > div,
.c7 label {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: repeat(2,1fr);
  grid-column-gap: 6 px;
}

.c7 > div span,
.c7 label span {
  padding-top: 4px;
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
}

.c7 > div h4,
.c7 label h4 {
  text-shadow: 1px 1px rgb(234,242,246);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  text-align: left;
}

.c7 > div input,
.c7 label input {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  padding: 10px;
  color: rgb(0,130,155);
  font-size: 13px;
  width: 100%;
}

.c7 > div input::-webkit-input-placeholder,
.c7 label input::-webkit-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c7 > div input::-moz-placeholder,
.c7 label input::-moz-placeholder {
  color: rgba(0,130,155,0.7);
}

.c7 > div input:-ms-input-placeholder,
.c7 label input:-ms-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c7 > div input::placeholder,
.c7 label input::placeholder {
  color: rgba(0,130,155,0.7);
}

.c7 > div input:disabled,
.c7 label input:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3 {
  padding: 12px;
  position: relative;
}

.c4 {
  grid-column: 1/3;
  display: grid;
  grid-gap: 12px;
  grid-template-columns: 1fr;
}

.c4 > form:not(:last-child) {
  margin-bottom: 12px;
}

.c0 {
  width: 100vw;
  padding: 24px 48px;
  padding-top: 64px;
}

.c2 {
  border: 2px solid rgb(242,143,34);
  border-radius: 20px;
  background-color: rgba(65,178,180,0.1);
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px) {
  .c7 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media only screen and (min-width:1800px) {
  .c7 {
    grid-template-columns: repeat(3,1fr);
  }
}

@media only screen and (min-width:600px) and (max-width:899px) {
  .c7 > div,
  .c7 label {
    grid-template-columns: repeat(1,1fr);
  }
}

@media only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c4 {
    grid-template-columns: repeat(2,1fr);
  }
}

<div
  class="c0"
  data-testid="weapons"
>
  <div
    class="c1"
    data-testid="header"
  >
    <h2>
      Weapons
    </h2>
  </div>
  <div
    class="c2 c3"
    data-testid="weapons-section"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
        data-testid="weapon-2"
      >
        <button
          class="c6"
          data-testid="dropdown-2"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 320 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <h3>
            Fists
          </h3>
        </button>
        <div
          class="c7"
          data-testid="weapon-2-content"
        >
          <div
            data-testid="weapon-2-skill"
          >
            <h4>
              Skill:
            </h4>
            <span>
              Brawl
            </span>
          </div>
          <div
            data-testid="weapon-2-range"
          >
            <h4>
              Range:
            </h4>
            <span>
              Engaged
            </span>
          </div>
          <div
            data-testid="weapon-2-special"
          >
            <h4>
              Special:
            </h4>
            <span>
              Disorient 1, Knockdown
            </span>
          </div>
          <div
            data-testid="weapon-2-damage"
          >
            <h4>
              Damage:
            </h4>
            <span>
              2
            </span>
          </div>
          <div
            data-testid="weapon-2-crit"
          >
            <h4>
              Crit:
            </h4>
            <span>
              5
            </span>
          </div>
          <div
            data-testid="weapon-2-encumbrance"
          >
            <h4>
              Encumbrance:
            </h4>
            <span>
              0
            </span>
          </div>
          <div
            data-testid="weapon-2-hard_points"
          >
            <h4>
              Hard Points:
            </h4>
            <span>
              0
            </span>
          </div>
          <div
            data-testid="weapon-2-price"
          >
            <h4>
              Price:
            </h4>
            <span>
              0
            </span>
          </div>
          <div
            data-testid="weapon-2-restricted"
          >
            <h4>
              Restricted:
            </h4>
            <span>
              No
            </span>
          </div>
          <div
            data-testid="weapon-2-rarity"
          >
            <h4>
              Rarity:
            </h4>
            <span>
              0
            </span>
          </div>
        </div>
      </div>
      <div
        class="c5"
        data-testid="weapon-1"
      >
        <button
          class="c6"
          data-testid="dropdown-1"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 320 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <h3>
            Stun Gun
          </h3>
        </button>
        <div
          class="c7"
          data-testid="weapon-1-content"
        >
          <div
            data-testid="weapon-1-skill"
          >
            <h4>
              Skill:
            </h4>
            <span>
              Melee
            </span>
          </div>
          <div
            data-testid="weapon-1-range"
          >
            <h4>
              Range:
            </h4>
            <span>
              Engaged
            </span>
          </div>
          <div
            data-testid="weapon-1-special"
          >
            <h4>
              Special:
            </h4>
            <span>
              Stun 4, Stun Damage
            </span>
          </div>
          <div
            data-testid="weapon-1-damage"
          >
            <h4>
              Damage:
            </h4>
            <span>
              6
            </span>
          </div>
          <div
            data-testid="weapon-1-crit"
          >
            <h4>
              Crit:
            </h4>
            <span>
              5
            </span>
          </div>
          <div
            data-testid="weapon-1-encumbrance"
          >
            <h4>
              Encumbrance:
            </h4>
            <span>
              1
            </span>
          </div>
          <div
            data-testid="weapon-1-hard_points"
          >
            <h4>
              Hard Points:
            </h4>
            <span>
              1
            </span>
          </div>
          <div
            data-testid="weapon-1-price"
          >
            <h4>
              Price:
            </h4>
            <span>
              200
            </span>
          </div>
          <div
            data-testid="weapon-1-restricted"
          >
            <h4>
              Restricted:
            </h4>
            <span>
              No
            </span>
          </div>
          <div
            data-testid="weapon-1-rarity"
          >
            <h4>
              Rarity:
            </h4>
            <span>
              3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Weapons gm 1`] = `
.c5 {
  padding: 12px;
  border: none;
  background: transparent;
  cursor: pointer;
  color: rgb(0,130,155);
  font-size: 30px;
}

.c5:disabled {
  color: rgb(65,178,180);
  cursor: not-allowed;
}

.c1 {
  position: fixed;
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  border-top: 40px solid rgb(0,130,155);
  border-left: 30px solid transparent;
  border-right: 30px solid transparent;
  height: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  z-index: 1000;
}

.c1 h2 {
  position: relative;
  top: -40px;
  padding: 6px 6px;
  margin: 0 auto;
  color: rgb(234,242,246);
  white-space: nowrap;
  text-transform: uppercase;
}

.c7 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: repeat(1,1fr);
  grid-row-gap: 6px;
  grid-column-gap: 12px;
}

.c8 {
  max-width: 100%;
  padding: 6px;
  border: 2px solid rgb(0,130,155);
  border-radius: 5px;
  cursor: pointer;
  text-transform: uppercase;
  background: rgb(0,130,155);
  overflow: hidden;
  position: relative;
}

.c8 > h3 {
  margin: 0;
  color: rgb(234,242,246);
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c8 > svg {
  display: none;
  position: absolute;
  padding: 6px;
  right: 0;
  top: 0;
  font-size: 27px;
  color: rgb(234,242,246);
  background-color: inherit;
}

.c8:hover > svg {
  display: block;
}

.c9 {
  padding: 12px;
  display: none;
  grid-row-gap: 6px;
  grid-column-gap: 12px;
  grid-template-columns: repeat(1,1fr);
}

.c9 > div,
.c9 label {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: repeat(2,1fr);
  grid-column-gap: 6 px;
}

.c9 > div span,
.c9 label span {
  padding-top: 4px;
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
}

.c9 > div h4,
.c9 label h4 {
  text-shadow: 1px 1px rgb(234,242,246);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  text-align: left;
}

.c9 > div input,
.c9 label input {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  padding: 10px;
  color: rgb(0,130,155);
  font-size: 13px;
  width: 100%;
}

.c9 > div input::-webkit-input-placeholder,
.c9 label input::-webkit-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c9 > div input::-moz-placeholder,
.c9 label input::-moz-placeholder {
  color: rgba(0,130,155,0.7);
}

.c9 > div input:-ms-input-placeholder,
.c9 label input:-ms-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c9 > div input::placeholder,
.c9 label input::placeholder {
  color: rgba(0,130,155,0.7);
}

.c9 > div input:disabled,
.c9 label input:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3 {
  padding: 12px;
  position: relative;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 h3 {
  width: 100%;
  margin: 0;
  text-transform: uppercase;
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 div > button {
  font-size: 25px;
  padding: 6px;
}

.c6 {
  grid-column: 1/3;
  display: grid;
  grid-gap: 12px;
  grid-template-columns: 1fr;
}

.c6 > form:not(:last-child) {
  margin-bottom: 12px;
}

.c0 {
  width: 100vw;
  padding: 24px 48px;
  padding-top: 64px;
}

.c2 {
  border: 2px solid rgb(242,143,34);
  border-radius: 20px;
  background-color: rgba(65,178,180,0.1);
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px) {
  .c9 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media only screen and (min-width:1800px) {
  .c9 {
    grid-template-columns: repeat(3,1fr);
  }
}

@media only screen and (min-width:600px) and (max-width:899px) {
  .c9 > div,
  .c9 label {
    grid-template-columns: repeat(1,1fr);
  }
}

@media only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c6 {
    grid-template-columns: repeat(2,1fr);
  }
}

<div
  class="c0"
  data-testid="weapons"
>
  <div
    class="c1"
    data-testid="header"
  >
    <h2>
      Weapons
    </h2>
  </div>
  <div
    class="c2 c3"
    data-testid="weapons-section"
  >
    <div
      class="c4"
    >
      <div
        data-testid="form-buttons-weapon"
      >
        <button
          class="c5"
          data-testid="edit-weapon"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="c6"
    >
      <div
        class="c7"
        data-testid="weapon-2"
      >
        <button
          class="c8"
          data-testid="dropdown-2"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 320 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <h3>
            Fists
          </h3>
        </button>
        <div
          class="c9"
          data-testid="weapon-2-content"
        >
          <div
            data-testid="weapon-2-skill"
          >
            <h4>
              Skill:
            </h4>
            <span>
              Brawl
            </span>
          </div>
          <div
            data-testid="weapon-2-range"
          >
            <h4>
              Range:
            </h4>
            <span>
              Engaged
            </span>
          </div>
          <div
            data-testid="weapon-2-special"
          >
            <h4>
              Special:
            </h4>
            <span>
              Disorient 1, Knockdown
            </span>
          </div>
          <div
            data-testid="weapon-2-damage"
          >
            <h4>
              Damage:
            </h4>
            <span>
              2
            </span>
          </div>
          <div
            data-testid="weapon-2-crit"
          >
            <h4>
              Crit:
            </h4>
            <span>
              5
            </span>
          </div>
          <div
            data-testid="weapon-2-encumbrance"
          >
            <h4>
              Encumbrance:
            </h4>
            <span>
              0
            </span>
          </div>
          <div
            data-testid="weapon-2-hard_points"
          >
            <h4>
              Hard Points:
            </h4>
            <span>
              0
            </span>
          </div>
          <div
            data-testid="weapon-2-price"
          >
            <h4>
              Price:
            </h4>
            <span>
              0
            </span>
          </div>
          <div
            data-testid="weapon-2-restricted"
          >
            <h4>
              Restricted:
            </h4>
            <span>
              No
            </span>
          </div>
          <div
            data-testid="weapon-2-rarity"
          >
            <h4>
              Rarity:
            </h4>
            <span>
              0
            </span>
          </div>
        </div>
      </div>
      <div
        class="c7"
        data-testid="weapon-1"
      >
        <button
          class="c8"
          data-testid="dropdown-1"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 320 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <h3>
            Stun Gun
          </h3>
        </button>
        <div
          class="c9"
          data-testid="weapon-1-content"
        >
          <div
            data-testid="weapon-1-skill"
          >
            <h4>
              Skill:
            </h4>
            <span>
              Melee
            </span>
          </div>
          <div
            data-testid="weapon-1-range"
          >
            <h4>
              Range:
            </h4>
            <span>
              Engaged
            </span>
          </div>
          <div
            data-testid="weapon-1-special"
          >
            <h4>
              Special:
            </h4>
            <span>
              Stun 4, Stun Damage
            </span>
          </div>
          <div
            data-testid="weapon-1-damage"
          >
            <h4>
              Damage:
            </h4>
            <span>
              6
            </span>
          </div>
          <div
            data-testid="weapon-1-crit"
          >
            <h4>
              Crit:
            </h4>
            <span>
              5
            </span>
          </div>
          <div
            data-testid="weapon-1-encumbrance"
          >
            <h4>
              Encumbrance:
            </h4>
            <span>
              1
            </span>
          </div>
          <div
            data-testid="weapon-1-hard_points"
          >
            <h4>
              Hard Points:
            </h4>
            <span>
              1
            </span>
          </div>
          <div
            data-testid="weapon-1-price"
          >
            <h4>
              Price:
            </h4>
            <span>
              200
            </span>
          </div>
          <div
            data-testid="weapon-1-restricted"
          >
            <h4>
              Restricted:
            </h4>
            <span>
              No
            </span>
          </div>
          <div
            data-testid="weapon-1-rarity"
          >
            <h4>
              Rarity:
            </h4>
            <span>
              3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Pages/Weapons loading 1`] = `
.c1 {
  position: fixed;
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
  border-top: 40px solid rgb(0,130,155);
  border-left: 30px solid transparent;
  border-right: 30px solid transparent;
  height: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  z-index: 1000;
}

.c1 h2 {
  position: relative;
  top: -40px;
  padding: 6px 6px;
  margin: 0 auto;
  color: rgb(234,242,246);
  white-space: nowrap;
  text-transform: uppercase;
}

.c5 {
  width: 100%;
  height: -webkit-fit-content;
  height: -moz-fit-content;
  height: fit-content;
  display: grid;
  grid-template-columns: repeat(1,1fr);
  grid-row-gap: 6px;
  grid-column-gap: 12px;
}

.c6 {
  max-width: 100%;
  padding: 6px;
  border: 2px solid rgb(0,130,155);
  border-radius: 5px;
  cursor: pointer;
  text-transform: uppercase;
  background: rgb(0,130,155);
  overflow: hidden;
  position: relative;
}

.c6 > h3 {
  margin: 0;
  color: rgb(234,242,246);
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c6 > svg {
  display: none;
  position: absolute;
  padding: 6px;
  right: 0;
  top: 0;
  font-size: 27px;
  color: rgb(234,242,246);
  background-color: inherit;
}

.c6:hover > svg {
  display: block;
}

.c7 {
  padding: 12px;
  display: none;
  grid-row-gap: 6px;
  grid-column-gap: 12px;
  grid-template-columns: repeat(1,1fr);
}

.c7 > div,
.c7 label {
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  grid-template-columns: repeat(2,1fr);
  grid-column-gap: 6 px;
}

.c7 > div span,
.c7 label span {
  padding-top: 4px;
  color: rgb(242,143,34);
  text-shadow: 1px 1px rgb(255,244,233);
}

.c7 > div h4,
.c7 label h4 {
  text-shadow: 1px 1px rgb(234,242,246);
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  text-align: left;
}

.c7 > div input,
.c7 label input {
  background-color: rgb(234,242,246);
  border: 1px solid rgb(0,130,155);
  border-radius: 5px;
  padding: 10px;
  color: rgb(0,130,155);
  font-size: 13px;
  width: 100%;
}

.c7 > div input::-webkit-input-placeholder,
.c7 label input::-webkit-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c7 > div input::-moz-placeholder,
.c7 label input::-moz-placeholder {
  color: rgba(0,130,155,0.7);
}

.c7 > div input:-ms-input-placeholder,
.c7 label input:-ms-input-placeholder {
  color: rgba(0,130,155,0.7);
}

.c7 > div input::placeholder,
.c7 label input::placeholder {
  color: rgba(0,130,155,0.7);
}

.c7 > div input:disabled,
.c7 label input:disabled {
  opacity: 0.5;
  cursor: not-allowed;
}

.c3 {
  padding: 12px;
  position: relative;
}

.c4 {
  grid-column: 1/3;
  display: grid;
  grid-gap: 12px;
  grid-template-columns: 1fr;
}

.c4 > form:not(:last-child) {
  margin-bottom: 12px;
}

.c0 {
  width: 100vw;
  padding: 24px 48px;
  padding-top: 64px;
}

.c2 {
  border: 2px solid rgb(242,143,34);
  border-radius: 20px;
  background-color: rgba(65,178,180,0.1);
}

@media only screen and (min-width:600px) and (max-width:899px),only screen and (min-width:900px) and (max-width:1199px),only screen and (min-width:1200px) and (max-width:1799px) {
  .c7 {
    grid-template-columns: repeat(2,1fr);
  }
}

@media only screen and (min-width:1800px) {
  .c7 {
    grid-template-columns: repeat(3,1fr);
  }
}

@media only screen and (min-width:600px) and (max-width:899px) {
  .c7 > div,
  .c7 label {
    grid-template-columns: repeat(1,1fr);
  }
}

@media only screen and (min-width:1200px) and (max-width:1799px),only screen and (min-width:1800px) {
  .c4 {
    grid-template-columns: repeat(2,1fr);
  }
}

<div
  class="c0"
  data-testid="weapons"
>
  <div
    class="c1"
    data-testid="header"
  >
    <h2>
      Weapons
    </h2>
  </div>
  <div
    class="c2 c3"
    data-testid="weapons-section"
  >
    <div
      class="c4"
    >
      <div
        class="c5"
        data-testid="weapon-2"
      >
        <button
          class="c6"
          data-testid="dropdown-2"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 320 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <h3>
            Fists
          </h3>
        </button>
        <div
          class="c7"
          data-testid="weapon-2-content"
        >
          <div
            data-testid="weapon-2-skill"
          >
            <h4>
              Skill:
            </h4>
            <span>
              Brawl
            </span>
          </div>
          <div
            data-testid="weapon-2-range"
          >
            <h4>
              Range:
            </h4>
            <span>
              Engaged
            </span>
          </div>
          <div
            data-testid="weapon-2-special"
          >
            <h4>
              Special:
            </h4>
            <span>
              Disorient 1, Knockdown
            </span>
          </div>
          <div
            data-testid="weapon-2-damage"
          >
            <h4>
              Damage:
            </h4>
            <span>
              2
            </span>
          </div>
          <div
            data-testid="weapon-2-crit"
          >
            <h4>
              Crit:
            </h4>
            <span>
              5
            </span>
          </div>
          <div
            data-testid="weapon-2-encumbrance"
          >
            <h4>
              Encumbrance:
            </h4>
            <span>
              0
            </span>
          </div>
          <div
            data-testid="weapon-2-hard_points"
          >
            <h4>
              Hard Points:
            </h4>
            <span>
              0
            </span>
          </div>
          <div
            data-testid="weapon-2-price"
          >
            <h4>
              Price:
            </h4>
            <span>
              0
            </span>
          </div>
          <div
            data-testid="weapon-2-restricted"
          >
            <h4>
              Restricted:
            </h4>
            <span>
              No
            </span>
          </div>
          <div
            data-testid="weapon-2-rarity"
          >
            <h4>
              Rarity:
            </h4>
            <span>
              0
            </span>
          </div>
        </div>
      </div>
      <div
        class="c5"
        data-testid="weapon-1"
      >
        <button
          class="c6"
          data-testid="dropdown-1"
          type="button"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            stroke-width="0"
            viewBox="0 0 320 512"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
          <h3>
            Stun Gun
          </h3>
        </button>
        <div
          class="c7"
          data-testid="weapon-1-content"
        >
          <div
            data-testid="weapon-1-skill"
          >
            <h4>
              Skill:
            </h4>
            <span>
              Melee
            </span>
          </div>
          <div
            data-testid="weapon-1-range"
          >
            <h4>
              Range:
            </h4>
            <span>
              Engaged
            </span>
          </div>
          <div
            data-testid="weapon-1-special"
          >
            <h4>
              Special:
            </h4>
            <span>
              Stun 4, Stun Damage
            </span>
          </div>
          <div
            data-testid="weapon-1-damage"
          >
            <h4>
              Damage:
            </h4>
            <span>
              6
            </span>
          </div>
          <div
            data-testid="weapon-1-crit"
          >
            <h4>
              Crit:
            </h4>
            <span>
              5
            </span>
          </div>
          <div
            data-testid="weapon-1-encumbrance"
          >
            <h4>
              Encumbrance:
            </h4>
            <span>
              1
            </span>
          </div>
          <div
            data-testid="weapon-1-hard_points"
          >
            <h4>
              Hard Points:
            </h4>
            <span>
              1
            </span>
          </div>
          <div
            data-testid="weapon-1-price"
          >
            <h4>
              Price:
            </h4>
            <span>
              200
            </span>
          </div>
          <div
            data-testid="weapon-1-restricted"
          >
            <h4>
              Restricted:
            </h4>
            <span>
              No
            </span>
          </div>
          <div
            data-testid="weapon-1-rarity"
          >
            <h4>
              Rarity:
            </h4>
            <span>
              3
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
